# simple-sensor-display-demo

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  arm-toolchain.cmake  lv_conf.h
app/: CMakeLists.txt  main.c  sensors.c  sensors.h  ui.c  ui.h
driver/: CMakeLists.txt  ap3216c.c  icm20608.c
misc/: load_and_run.sh
